# api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.forgejo/workflows/: publish.yml
.github/: dependabot.yml
.github/workflows/: publish.yml
api/: __init__.py  app.py
api/json/: arknights.json  touhou.json  uma.json
