[project]
name = "api"
version = "0.1.0"
description = "iostpa's API shenanigans"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter[mongodb]>=4.1.1",
    "flask-restful>=0.3.10",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "werkzeug>=3.1.4",
    "wheel>=0.45.1",
]
